# SearchEngines

./: CMakeLists.txt
Dict/: DictMap.h
Index/: CMakeLists.txt  DictMap.h  DocList.h  InvertSet.h  InvertWriter.h  NewMemoryDocList.h
Message/: CMakeLists.txt  DocId.h  message.pb.cc  message.pb.h  message.proto
Store/: CMakeLists.txt  FileMmapStore.h  FileStore.h  StoreService.h
binlog/: binlog_service.go
index/dict/: dict_map.go  dict_map_test.go  dict_service.go
index/invert/: invert_reader.go  invert_service.go  invert_set.go  invert_test.go  invert_writer.go  memory_doc_list.go
message/: ext_message.go  message.pb.go  message.proto
mlog/: mlog.go
store/: file_mmap_reader.go  file_mmap_store.go  file_store.go  file_store_writer.go
tests/dictmap_test/: CMakeLists.txt  main.cpp
tests/invert_test/: CMakeLists.txt  main.cpp
tools/: DicMapStruct.h  FileUtil.h  define.go  utils.go
util/: basic_data.go  basic_data_test.go  basic_interface.go
